--- a/MidExam_content.html
+++ b/MidExam_content.html
@@ -30,6 +30,7 @@
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
+            font-size: x-large;
         }
 
         .nav_menu a:hover {
@@ -45,6 +46,7 @@
             text-align: justify;
             background-color:red;
             color: white;
+            min-height: 500px;
         }
         .columnB{
             float: left;
@@ -52,6 +54,8 @@
             padding: 15px;
             text-align: justify;
             background-color: yellow;
+            min-height: 500px;
+
         }
         .columnC {
             float: left;
@@ -59,9 +63,10 @@
             padding: 15px;
             text-align: justify;
             background-color: pink;
+            min-height: 500px;
         }
 
-        h2 {
+        h1 {
             color: blue;
             text-align: center;
         }
@@ -78,9 +83,7 @@
 
 <body class="page">
     <div class="header">
-        <h2 style="color:white;font-size:200%">
-            Hello My Name is ..
-        </h2>
+        <h2 style="color:white;font-size:250%"> Welcome to my comapny</h2>
     </div>
 
     <!-- navigation menu of website layout -->
@@ -94,7 +97,7 @@
     <div class="row">
 
         <div class="columnA">
-            <h2>Project A</h2>
+            <h1>Project A</h1>
             <img class = "img" src = "Resource/Test.jpg" >
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, accusamus, doloribus dolorem
@@ -105,7 +108,7 @@
         </div>
 
         <div class="columnB">
-            <h2>Project B</h2>
+            <h1>Project B</h1>
             <img class = "img" src = "Resource/Test.jpg" >
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, accusamus, doloribus dolorem
@@ -115,7 +118,7 @@
         </div>
 
         <div class="columnC">
-            <h2>Project C</h2>
+            <h1>Project C</h1>
             <img class = "img" src = "Resource/Test.jpg" >
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, accusamus, doloribus dolorem
