--- a/Quiz.html
+++ b/Quiz.html
@@ -35,6 +35,7 @@
     .right {
       width: 15%;
       float: left;
+
     }
 
     .Pages {
@@ -62,10 +63,10 @@
   <div class="container">
     <div class="left">
       <h3>Left Page</h3>
-      <div class="Pages"><a href="Page1.html"> Page1</a> </div>
-      <div class="Pages"><a href="Page2.html"> Page2</a> </div>
-      <div class="Pages"><a href="Page3.html"> Page3</a> </div>
-      <div class="Pages"><a href="Page4.html"> Page4</a> </div>
+      <div class="Pages"><a href="https://www.google.com/" target="_blank"> Page1</a> </div>
+      <div class="Pages"><a href="https://www.google.com/" target="_blank"> Page2</a> </div>
+      <div class="Pages"><a href="https://www.google.com/"  target="_blank"> Page3</a> </div>
+      <div class="Pages"><a href="https://www.google.com/"  target="_blank"> Page4</a> </div>
     </div>
     <div class="body">
       <h1>Body Page</h1>
